tests/semantic/factor_err1.expected

Semantic Error [line 7]: value: "sc1_b"
	Unexpected r-value type: 
Expected type(s) 'Integer'; found 'String' instead.
