tests/semantic/factor_err1.mtp
(*Try to not a string value*)
const b := '1';
var a : integer;

begin

	a := b
end. 